--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <title>Sarah Rathnam</title>
-<h1>This is a Heading</h1>
+<h1>Header</h1>
 <img src="https://github.com/sarahrathnam/sarahrathnam.github.io/blob/main/Gracie_Portrait.JPG">
