--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
 <title>Sarah Rathnam</title>
-<h1>Header</h1>
-<img src="https://github.com/sarahrathnam/sarahrathnam.github.io/blob/main/Gracie_Portrait.JPG">
+<h1>this is my website.</h1>
